methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:2: error: not found: type boolean
def move(nbPas:Int,versLavant:boolean){
                              ^