methods.args.MethodsArgs.scala.code
def move(nbPas:Int,versLavant:boolean){
  avance(nbPas)
}